--- a/euriko-app/package.json
+++ b/euriko-app/package.json
@@ -19,25 +19,26 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "52.0.38",
+    "expo": "^53.0.11",
     "expo-blur": "~14.0.3",
     "expo-constants": "17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "4.0.18",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "^5.1.0",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "^5.0.8",
     "expo-web-browser": "~14.0.2",
+    "jest-expo": "^51.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.80.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^7.2.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
@@ -52,7 +53,6 @@
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "~29.7.0",
-    "jest-expo": "52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
